# KNMI-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Demo.ipynb  README.md  Untitled.ipynb  deploy_to_pypi.sh  manifest.in  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
knmi/: __init__.py  knmi.py  metadata.py  parsers.py
new_for_Adding_hourly_based_wico/: TestKNMI.py  knmi.py  parsers.py
src/knmi/: __init__.py  knmi.py  metadata.py  parsers.py
tests/: TestKNMI.py  test_knmi.py
tests/testdata/: get_day_data.csv  get_day_data_all_stn_rh.csv  get_hour_data.csv  get_hour_data_temp_sun.csv
