[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"
backend-path = ["."]

[project]
name = "knmi-py"
version = "0.2.0"
description = "A Python API wrapper for KNMI data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "EnergieID.be", email = "jan@energieid.be" },
]
keywords = ["knmi", "weather", "data", "pandas", "api", "netherlands"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Natural Language :: Dutch",
]

dependencies = [
    "requests>=2.25.0",
    "pandas>=1.5.3",
    "beautifulsoup4>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/EnergieID/KNMI-py"
Repository = "https://github.com/EnergieID/KNMI-py"
"Bug Tracker" = "https://github.com/EnergieID/KNMI-py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "uv",
    "build",
    "twine",
]

[tool.hatch.version]
# Static version defined in [project].version

[tool.hatch.build.targets.wheel]
packages = ["knmi"]

[tool.ruff]
line-length = 120
select = ["E", "W", "F", "I", "C", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
knmi-py = { workspace = true }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "knmi-py",
]
